<resources>
    <string name="app_name" translatable="false">Pets</string>

    <string name="name_label">Name</string>
    <string name="breed_label">Breed</string>

    <string name="gender_label">Gender</string>
    <string name="unknown_option">Unknown</string>
    <string name="male_option">Male</string>
    <string name="female_option">Female</string>

    <string name="save_label">Save</string>
    <string name="add_pet_label">Add pet</string>
    <string name="delete_label">Delete</string>

    <string name="image_empty_shelter" translatable="false">image</string>
    <string name="empty_title_text">It\'s been lonely here...</string>
    <string name="empty_subtitle_text">Get started by adding a pet</string>

    <string name="add_new_pet_title">Add a new pet</string>
    <string name="edit_pet_title">Edit a pet</string>

    <string name="delete_this_pet_msg">Delete this pet?</string>
    <string name="delete_action_option">Delete</string>
    <string name="cancel_action_option">Cancel</string>

    <string name="pet_saved_successfully_msg">Pet saved successfully!</string>
    <string name="pet_deleted_successfully_msg">Pet deleted successfully!</string>

    <string name="name_must_be_typed_msg">Name must be typed</string>
    <string name="breed_must_be_typed_msg">Breed must be typed</string>
    <string name="gender_must_be_selected_msg">Gender must be selected</string>

</resources>