<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="petDetailViewModel"
            type="br.com.petapp.viewmodel.PetDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.PetsDetailFragment">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/name_label"
            android:importantForAutofill="no"
            android:inputType="textCapSentences"
            android:text="@{petDetailViewModel.pet.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewName"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextBreed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="9"
            android:ems="10"
            android:hint="@string/breed_label"
            android:importantForAutofill="no"
            android:inputType="textCapSentences"
            android:text="@{petDetailViewModel.pet.breed}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/editTextName"
            app:layout_constraintTop_toBottomOf="@+id/editTextName" />

        <Spinner
            android:id="@+id/spinnerGender"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:spinnerMode="dropdown"
            app:genders="@{petDetailViewModel.genders}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewGender"
            app:layout_constraintTop_toBottomOf="@+id/editTextBreed"
            app:selectedGender="@{petDetailViewModel.pet.gender}" />

        <ImageView
            android:id="@+id/imageViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/image_empty_shelter"
            app:layout_constraintBottom_toBottomOf="@+id/editTextName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextName"
            app:srcCompat="@drawable/ic_cat" />

        <ImageView
            android:id="@+id/imageViewGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/image_empty_shelter"
            app:layout_constraintBottom_toBottomOf="@+id/spinnerGender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spinnerGender"
            app:srcCompat="@drawable/ic_gender" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>


